fixed height of projects.

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             projectHome.style.visibility = 'hidden';
             projectHome.style.height = '0vh';
             projectSection.style.visibility = 'visible';
-            projectSection.style.height = '100vh';
+            projectSection.style.height = 'fit-content';
             animate();
         }
 
