--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 <span> Resume</span>
             </a></br>
 
-             <a class="links" href="https://github.com/sumitdhakad2837" 
+             <a class="links" href="https://github.com/wevdevsumit" 
              ><img class="linksImg" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/github-512.png" />
                 <span> Github</span>
             </a></br>
 
-             <a class="links" href="https://www.linkedin.com/in/sumit-dhakad-0152b1189" 
+             <a class="links" href="https://www.linkedin.com/in/sumit-dhakad" 
              ><img class="linksImg" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"/>
                 <span> Linkedin</span>
             </a></br>
